--- a/style.css
+++ b/style.css
@@ -62,19 +62,43 @@ body {
 }
 
 .generalContainer {
+    font-family: 'Tektur', cursive;
     width: 50%;
-    height: 65%;
+    height: 85%;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: auto 1fr auto;
 }
 
 .cell {
-    border: 4px solid #011627;
-    border-bottom: none;
-    border-top: none;
+    border: 2px solid #011627;
+    font-size: 14em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .title {
     font-size: xx-large;
+    font-weight: 700;
+}
+
+.bordersUp {
+    border-top: none;
+}
+.bordersLeft {
+    border-left: none;
+}
+.bordersRight {
+    border-right: none;
+}
+.bordersDown {
+    border-bottom: none;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3em;
+    
 }
