--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ img {vertical-align: top;}
 h1, h2, h3, h4, h5, h6 {font-size: inherit; font-weight: 400;}
 
 body {
-    background-color: #fdfffc;
+    background-color: #fff;
+    color:#373B44;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,11 +72,12 @@ body {
 }
 
 .cell {
-    border: 2px solid #011627;
+    border: 2px solid #373B44;
     font-size: 14em;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: 3s;
 }
 
 .title {
@@ -99,6 +101,40 @@ body {
 .buttonContainer {
     display: flex;
     justify-content: space-around;
-    margin-top: 3em;
-    
+    margin-top: 3em;   
+}
+
+button{
+  --b: 3px;   /* border thickness */
+  --s: .45em; /* size of the corner */
+  --color: #373B44;
+  
+  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background:
+    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
+    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
+  transition: .3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: .6em;
+  font-size: 16px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+button:hover,
+button:focus-visible{
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: .05em;
+}
+
+button:active {
+  background: var(--color);
+  color: #fff;
 }
